# agente-ia

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
scripts/: migrate.py  seed_client.py
src/: main.py
src/agent/: engine.py  graph.py  state.py  worker.py
src/agent/nodes/: interpreter.py  responder.py  tool_executor.py
src/config/: loader.py  models.py
src/dashboard/: router.py
src/observability/: event_logger.py  events.py
src/persistence/: database.py  models.py  queries.py  repository.py
src/persistence/migrations/: 001_initial.sql
src/queue/: interface.py  memory_queue.py  tasks.py
src/tools/: base.py  registry.py
src/tools/builtin/: get_weather.py
src/webhook/: client_resolver.py  router.py  signature.py
src/whatsapp/: client.py  models.py
tests/: conftest.py
tests/integration/: test_agent_turn.py  test_webhook_flow.py
tests/unit/: test_agent_state.py  test_client_resolver.py  test_config_loader.py  test_event_logger.py  test_registry.py  test_signature.py
